8173764: G1 BOT wrongly assumes that objects must always begin at the start of G1BlockOffsetTablePart

Reviewed-by: tschatzl, kbarrett